--- a/trillo/css/style.css
+++ b/trillo/css/style.css
@@ -57,3 +57,21 @@ body {
   background-color: #fff;
   background-color: orangered;
   flex: 1; }
+
+/* Logo */
+.logo {
+  height: 3.25rem; }
+
+/* Search */
+.search__icon {
+  height: 2rem;
+  width: 2rem; }
+
+/* User navigation */
+.user-nav__icon {
+  height: 2.25rem;
+  width: 2.25rem; }
+
+.user-nav__user-photo {
+  height: 3.75rem;
+  border-radius: 50%; }
