--- a/trillo/sass/_layout.scss
+++ b/trillo/sass/_layout.scss
@@ -11,7 +11,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-light-2);
+    border-bottom: 1px solid var(--color-grey-light-2);
 
     display: flex;
     justify-content: space-between;
@@ -34,9 +34,6 @@
 
 .hotel-view {
     background-color: #fff;
-
-    background-color: orangered;
     height: 80rem;
-
     flex: 1;
 }
