--- a/trillo/sass/_layout.scss
+++ b/trillo/sass/_layout.scss
@@ -22,6 +22,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media only screen and (max-width: $bp-smallest) {
+        flex-wrap: wrap;
+        align-content: space-around;
+        height: 11rem;
+    }
 }
 
 .content {
@@ -57,6 +63,10 @@
     @media only screen and (max-width: $bp-medium) {
         padding: 3rem;
     }
+
+    @media only screen and (max-width: $bp-small) {
+        flex-direction: column;
+    }
 }
 
 .description {
@@ -67,8 +77,13 @@
     margin-right: 4.5rem;
 
     @media only screen and (max-width: $bp-medium) {
-        padding: 3rem;
+        padding: 2rem;
         margin-right: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        margin-right: 0;
+        margin-bottom: 3rem;
     }
 }
 
