--- a/nexter/sass/_base.scss
+++ b/nexter/sass/_base.scss
@@ -17,19 +17,25 @@ $font-display: 'Josefin Sans', sans-serif;
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
 }
 
 html {
-  box-sizing: border-box;
-  font-size: 62.5%;
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
 
 body {
-  font-family: $font-primary;
-  color: $color-grey-dark-2;
-  font-weight: 300;
-  line-height: 1.6;
+    font-family: $font-primary;
+    color: $color-grey-dark-2;
+    font-weight: 300;
+    line-height: 1.6;
+}
+
+.container {
+    display: grid;
+
+    grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
 }
